# libelas-opencv

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
include/: descriptor.h  elas.h  filter.h  image.h  matrix.h  timer.h
src/: elas.cpp  filter.cpp  main.cpp  matrix.cpp  triangle.cpp
